--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,18 @@ body {
 gbtransparent {
   background-color: red;
 }
+
+span {
+  font-size: 12px;
+  padding: 3px;
+  color: red;
+  display: none;
+}
+
+input:invalid[focused="true"] {
+  border: 1px solid red;
+}
+
+input:invalid[focused="true"] ~ span {
+  display: block;
+}
